[package]
name = "whdl"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "process", "macros", "sync"] }
